@@ -10,6 +10,12 @@ Regina - A Normal Surface Theory Calculator
 Version 4.3.1  [ 28 April, 2006 ]
 
     ENGINE:
+        Class NFacePairing:
+            - New constructor for building the face pairing of an
+              existing triangulation.
+            - New routines hasOneEndedChainWithStrayBigon() and
+              hasTripleOneEndedChain() for testing for more types of
+              graphs that cannot appear in a closed census.
         Routine readOrb():
             - New routine for importing Orb / Casson triangulations;
               thanks to Ryan Budney.
